Fixed README.md, added TODO-s, updated libraries