@@ -15,8 +15,8 @@ buildscript {
     }
 
     dependencies {
-        classpath("com.android.tools.build:gradle:7.3.1")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0")
+        classpath("com.android.tools.build:gradle:8.2.1")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22")
     }
 }
 
@@ -24,7 +24,7 @@ allprojects {
     val kotlinLint by configurations.creating
 
     dependencies {
-        kotlinLint("com.pinterest:ktlint:0.48.2") {
+        kotlinLint("com.pinterest:ktlint:1.1.1") {
             attributes {
                 attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
             }
@@ -36,23 +36,12 @@ allprojects {
         mavenCentral()
     }
 
-    tasks.register("checkJavaStyle", Checkstyle::class.java) {
-        isShowViolations = true
-        configFile = file("../settings/checkstyle.xml")
-        setSource("src/main/java")
-        include("**/*.java")
-        exclude("**/gen/**")
-        exclude("**/R.java")
-        exclude("**/BuildConfig.java")
-
-        classpath = files()
-    }
-
     tasks.register<JavaExec>("ktlint") {
         description = "Check Kotlin code style."
         mainClass.set("com.pinterest.ktlint.Main")
         classpath = kotlinLint
         args("src/**/*.kt")
+        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
     }
 
     tasks.register<JavaExec>("ktlintFormat") {
@@ -61,6 +50,7 @@ allprojects {
         mainClass.set("com.pinterest.ktlint.Main")
         classpath = kotlinLint
         args("-F", "src/**/*.kt")
+        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
     }
 }
 
